# fluffy-lamp

./: .gitignore
courseProject/: courseProject.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  weblogic.cpp  weblogic.h
linear-api/: Dockerfile  pyproject.toml  req.txt
linear-api/src/: __main__.py
linear-api/src/controllers/: linerar_controller.py
linear-api/src/core/: linear_solving.py
