[tool.poetry]
name = "linear-api"
version = "0.1.0"
description = ""
authors = ["Dan Gost <dangost16@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0.2"
PuLP = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
